hphp/test/slow/rx/is_enabled_bad3.php.expectf
Fatal error: Undefined constant 'HH\Rx\IS_ENABLED' in %s/test/slow/rx/is_enabled_bad3.php on line 5
